--- a/bremen6.css
+++ b/bremen6.css
@@ -66,6 +66,9 @@ h2 {
 #card3 {
   transform: rotate(-10deg);
 }
+#card4 {
+  transform: rotate(7deg) translateX(-10px);
+}
 .card {
   width: 270px;
   height: 220px;
@@ -96,6 +99,15 @@ h2 {
   position: absolute;
   transform: rotate(0deg);
   padding-top: 60px;
+  padding-left: 55px;
+  width: 200px;
+  height: 180px;
+  cursor: pointer;
+}
+.movie3 {
+  position: absolute;
+  transform: rotate(10deg);
+  padding-top: 50px;
   padding-left: 55px;
   width: 200px;
   height: 180px;
